# ncurses-maze

./: CMakeLists.txt  LICENSE  README.md  metrics.sh  times.txt  todo.sh  todo.txt
include/: ASCIIMazeRenderer.h  ColorMazeRenderer.h  ConsoleMazeRenderer.h  ConsoleViewport.h  ConsoleWindow.h  CursesInstance.h  DFSMazeGenerator.h  Dimension.h  EASCIIMazeRenderer.h  Game.h  Maybe.h  Maze.h  MazeCell.h  MazeCells.h  MazeGenerator.h  MazeGeneratorType.h  MazeRenderer.h  Point.h  PrimsMazeGenerator.h  PseudoConsoleWindow.h  RenderType.h  ScrollView.h  Statistic.h  StatisticVal.h  Stats.h  TypeMismatchException.h
new_include/: ConsoleViewport.h  ConsoleWindow.h  DFSMazeGenerator.h  Game.h  Maze.h  MazeRenderer.h  Point.h  PseudoConsoleWindow.h
new_src/: CMakeLists.txt  Game.cpp  Maze.cpp  main.cpp
new_src/generation/: CMakeLists.txt
new_src/rendering/: ConsoleMazeRenderer.cpp  ConsoleViewport.cpp  PseudoConsoleWindow.cpp
src/: ASCIIMazeRenderer.cpp  ASCIIMazeRenderer.h  CMakeLists.txt  ColorMazeRenderer.cpp  ColorMazeRenderer.h  Direction.h  EASCIIMazeRenderer.cpp  EASCIIMazeRenderer.h  Game.cpp  IndexOutOfBoundsException.h  Maze.cpp  Maze.h  MazeCells.cpp  MazeCells.h  MazeRenderer.cpp  Point.h  Statistic.cpp  StatisticVal.cpp  Stats.cpp  docopt.c  main.cpp  maze.h  usage.docopt
src/components/: CMakeLists.txt  ScrollView.cpp
src/generation/: CMakeLists.txt  DFSMazeGenerator.cpp  PrimsMazeGenerator.cpp
src/maze/: CMakeLists.txt  Maze.cpp  Maze.h  MazeCells.cpp  MazeCells.h
src/rendering/: ASCIIMazeRenderer.cpp  ASCIIMazeRenderer.h  CMakeLists.txt  ColorMazeRenderer.cpp  ColorMazeRenderer.h  ConsoleMazeRenderer.cpp  ConsoleViewport.cpp  ConsoleWindow.cpp  CursesInstance.cpp  EASCIIMazeRenderer.cpp  EASCIIMazeRenderer.h  MazeRenderer.cpp  MazeRenderer.h  PseudoConsoleWindow.cpp
src/utils/: CMakeLists.txt  Direction.h  IndexOutOfBoundsException.h
